# svm-chat-routing

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
app/: .gitignore  __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/router/: __init__.py  admin.py  chat.py  waha.py
app/services/: __init__.py  classifier.py  router.py  waha.py  whatsapp_acks.py
app/ws/: __init__.py  manager.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/admin/: AdminLiveContext.jsx  adminUtils.js
frontend/src/components/: AgentPanel.jsx  AppShell.jsx  ChatBubble.jsx  WhatsAppPanel.jsx
frontend/src/pages/: AdminDashboard.jsx  ArchivePage.jsx  ChatWidget.jsx
frontend/src/pages/admin/: AdminEmptyState.jsx  AdminLayout.jsx  AdminRoomPage.jsx
tests/: conftest.py  test_waha_routing.py
training/: README.md  dataset.csv  train.py
training/model/: svm_intent_pipeline.joblib
