[project]
name = "poc-chat-routing"
version = "0.1.0"
description = "FastAPI + React POC for thesis chat routing with SVM intent classification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic-settings",
    "python-multipart",
    "joblib",
    "scikit-learn==1.6.1",
    "httpx",
    "Sastrawi",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
